# attributedvertexclouds

./: README.md
data/noise/: noise-6.raw
data/shaders/: blockworld.frag  visualization.frag
data/shaders/arcs-avc/: standard.geom  standard.tcs  standard.tes  standard.vert
source/: CMakeLists.txt
source/attributedvertexclouds-arcs/: Arc.cpp  Arc.h  ArcImplementation.cpp  ArcImplementation.h  ArcRendering.cpp  ArcRendering.h  ArcVertexCloud.cpp  ArcVertexCloud.h  CMakeLists.txt  Rendering.cpp  Rendering.h  common.cpp  main.cpp
source/attributedvertexclouds-blockworld/: BlockWorldImplementation.cpp  BlockWorldImplementation.h  BlockWorldInstancing.cpp  BlockWorldInstancing.h  BlockWorldRendering.cpp  BlockWorldRendering.h  BlockWorldTriangleStrip.cpp  BlockWorldTriangleStrip.h  BlockWorldTriangles.cpp  BlockWorldTriangles.h  BlockWorldVertexCloud.cpp  BlockWorldVertexCloud.h  CMakeLists.txt  Rendering.cpp  Rendering.h  main.cpp
source/attributedvertexclouds-cuboids/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  CuboidImplementation.cpp  CuboidImplementation.h  CuboidInstancing.cpp  CuboidInstancing.h  CuboidRendering.cpp  CuboidRendering.h  CuboidTriangleStrip.cpp  CuboidTriangleStrip.h  CuboidTriangles.cpp  CuboidTriangles.h  CuboidVertexCloud.cpp  CuboidVertexCloud.h  Rendering.cpp  Rendering.h  common.h  main.cpp  rendering.cpp  rendering.h
source/attributedvertexclouds-polygons/: CMakeLists.txt  PolygonRendering.cpp  PolygonRendering.h  PolygonTriangleStrip.cpp  PolygonTriangleStrip.h  PolygonTriangles.cpp  PolygonTriangles.h  PolygonVertexCloud.cpp  main.cpp
source/attributedvertexclouds-prismas/: CMakeLists.txt  Prisma.cpp  Prisma.h  PrismaImplementation.cpp  PrismaImplementation.h  PrismaRendering.cpp  PrismaRendering.h  PrismaTriangleStrip.cpp  PrismaTriangleStrip.h  PrismaTriangles.cpp  PrismaTriangles.h  PrismaVertexCloud.cpp  PrismaVertexCloud.h  Rendering.cpp  Rendering.h  main.cpp
source/attributedvertexclouds-trajectories/: CMakeLists.txt  Rendering.cpp  Rendering.h  TrajectoryNode.cpp  TrajectoryNode.h  TrajectoryRendering.cpp  TrajectoryRendering.h  TrajectoryVertexCloud.cpp  TrajectoryVertexCloud.h  main.cpp
source/common/: CMakeLists.txt  Postprocessing.cpp  Rendering.cpp  Rendering.h  common.cpp  common.h
source/noise-generator/: CMakeLists.txt  main.cpp
(+15 files in other folders)
